Update package name from Fussy.jl to Fusion.jl

--- a/appa.tex
+++ b/appa.tex
@@ -345,7 +345,7 @@ In our model, each appearance of T is set to the pedestal profile defined earlie
 
 \section{Volume Averaged Powers}
 
-The first thing to consider in a fusion reactor is power balance. \\ \\ It is what separates a profitable device from a toaster. It's given by:
+The first thing to consider in a fusion reactor is power balance. \\ It is what separates a profitable device from a toaster. It's given by:
 
 \label{pwr_bal}
 \begin{equation}
