Change Fusion.jl back to Fussy.jl

--- a/intro.tex
+++ b/intro.tex
@@ -128,6 +128,6 @@ More concretely, this paper shows that new HTS tape technology is capable of low
 
 Moreover, this model shows that HTS is best utilized in different components for pulsed and steady-state operation. Steady-state tokamaks favor HTS use in the D-shaped magnets that circle the machine (i.e. the TF coils). Pulsed devices, on the other hand, benefit when HTS is employed in the central solenoid -- which produces most of the reactor's inductive current. A corollary of this is conventional copper magnets (i.e. inexpensive ones) can be used for pulsed TF coils, as their improved confinement saturates at much lower field strengths.
 
-Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple segues will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fusion.jl -- is the topic of an appendix chapter and is freely available at:
+Now that the problem has been thoroughly introduced, we will go over the theory behind steady-state and, then, pulsed tokamaks. A couple segues will be taken along the way to show how the model can be incorporated into a fusion systems code. This code -- Fussy.jl -- is the topic of an appendix chapter and is freely available at:
  
 {\centering \href{http://git.io/tokamak}{git.io/tokamak} \par }
